--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,30 +36,33 @@ android {
 
 dependencies {
 
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'androidx.core:core-ktx:1.3.2'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
-    implementation 'com.google.android.material:material:1.3.0'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.3'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.1'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    androidTestImplementation 'androidx.test:core:1.3.0'
-    androidTestImplementation 'androidx.test:runner:1.3.0'
-    androidTestImplementation 'androidx.test:rules:1.3.0'
-    androidTestImplementation 'com.jraska.livedata:testing-ktx:1.1.2'
-    androidTestImplementation 'android.arch.core:core-testing:1.1.1'
-
-    implementation 'androidx.fragment:fragment-ktx:1.4.1'
-    implementation "androidx.activity:activity-ktx:1.4.0"
-
-    implementation "androidx.datastore:datastore-preferences:1.0.0"
-
+    implementation "androidx.appcompat:appcompat:1.3.0"
+    implementation "androidx.core:core-ktx:1.6.0"
+    implementation "androidx.constraintlayout:constraintlayout:2.0.4"
+//lifecycle
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.1"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1"
+    implementation "androidx.fragment:fragment-ktx:1.3.5"
+    implementation "com.google.android.material:material:1.3.0"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.3"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.3"
+//data store
+    implementation "androidx.datastore:datastore-preferences:1.0.0-beta01"
+//glide
+    implementation "com.github.bumptech.glide:glide:4.12.0"
+    annotationProcessor "com.github.bumptech.glide:compiler:4.12.0"
+//tests
+    testImplementation "junit:junit:4.13.2"
+    debugImplementation "androidx.test.ext:junit:1.1.3"
+    debugImplementation "androidx.fragment:fragment-testing:1.3.5"
+    debugImplementation "androidx.test.espresso:espresso-core:3.4.0"
+    debugImplementation "androidx.test:core:1.4.0"
+    debugImplementation "androidx.test:runner:1.4.0"
+    debugImplementation "androidx.test:rules:1.4.0"
+    androidTestImplementation "com.jraska.livedata:testing-ktx:1.1.2"
+    androidTestImplementation "android.arch.core:core-testing:1.1.1"
+    androidTestImplementation "io.mockk:mockk-android:1.11.0"
     androidTestImplementation "com.github.tmurakami:dexopener:2.0.5"
-    androidTestImplementation 'io.mockk:mockk-android:1.11.0'
+
 
 }
