--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,4 +75,6 @@ dependencies {
     androidTestImplementation "io.mockk:mockk-android:1.12.0"
     androidTestImplementation "com.github.tmurakami:dexopener:2.0.5"
 
+    implementation "androidx.paging:paging-runtime-ktx:3.0.1"
+
 }
